--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Carlos Carandang</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Link to External JavaScript File -->
-    <script src="script.js"></script>
-    <!-- Link to External CSS File -->
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <title>Carlos Carandang</title>
+    <!-- Link to Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Link to Bootstrap Bundle (CSS + JS) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="/styles.css">
+</head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
+            <!-- Brand/Logo -->
             <a class="navbar-brand" href="#">Carlos Carandang</a>
+
+            <!-- Toggle Button for Mobile View -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- Collapsible Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -33,19 +37,77 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <div class="container">
-        <section>
-            <h1>Carlos Carandang</h1>
-            <a href="https://www.linkedin.com/in/ccarandang/">LinkedIn</a>
-            <a href="https://github.com/CarandangC">GitHub</a>
-            <a href="mailto:carlos.carandang@gmail.com">Email</a>
-        </section>
+    <div class="container mt-4">
+        <div class="row">
+            <!-- Left Column: Tech Stack, Resume, Photo of me-->
+            <div class="col-md-4">
+                <section>
+                
+                <img src="CarlosC47352.jpg" alt="Picture of me!" class="img-fluid mb-3" />
+                <p>Welcome to my website!</p>
+                <h4>Resume</h4>
+                <a href="Carlos_Carandang_Resume.pdf" download="Carlos_Carandang_Resume.pdf" class="btn btn-primary mb-3">Download PDF File</a>
+                
+                <section id="tech-stack">
+                    <h4>Tech Stack</h4>
 
-        <section id="output">
-            <!-- Text will be displayed here when buttons are clicked -->
-        </section>
+                    <!-- Dropdown Menu for Tech Stack -->
+                    <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Languages
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Python</a></li>
+                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
+                            <li><a class="dropdown-item" href="#">Java</a></li>
+                            <li><a class="dropdown-item" href="#">HTML/CSS</a></li>
+                            <li><a class="dropdown-item" href="#">SQL</a></li>
+                            <li><a class="dropdown-item" href="#">C</a></li>
+                            <li><a class="dropdown-item" href="#">Elixir</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="dropdown mt-3">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Frameworks & Libraries
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Pandas</a></li>
+                            <li><a class="dropdown-item" href="#">Matplotlib</a></li>
+                            <li><a class="dropdown-item" href="#">NumPy</a></li>
+                            <li><a class="dropdown-item" href="#">Beautiful Soup</a></li>
+                            <li><a class="dropdown-item" href="#">SQLite</a></li>
+                            <li><a class="dropdown-item" href="#">Flask</a></li>
+                            <li><a class="dropdown-item" href="#">Bootstrap</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="dropdown mt-3">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Tools & OS
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Git</a></li>
+                            <li><a class="dropdown-item" href="#">VIM Editor</a></li>
+                            <li><a class="dropdown-item" href="#">Visual Studio Code</a></li>
+                            <li><a class="dropdown-item" href="#">Linux/Unix</a></li>
+                            <li><a class="dropdown-item" href="#">Windows</a></li>
+                            <li><a class="dropdown-item" href="#">Microsoft Office</a></li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+
+            <!-- Right Column: Main Content (About Me, Projects, etc.) -->
+            <div class="col-md-8">
+                <section id="output">
+                    <!-- Content will be updated here when buttons are clicked -->
+                </section>
+            </div>
+        </div>
     </div>
 
+    <!-- Include your JavaScript here, at the bottom -->
+    <script src="scripts.js"></script>
 </body>
 </html>
