--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <button class="btn btn-link nav-link" id="btnProjects">Projects</button>
                     </li>
+                    <li class="nav-item">
+                        <button class="btn btn-link nav-link" id="btnExperience">Experience</button>
+                    </li>
                 </ul>
             </div>
         </div>
