--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
     <div class="container mt-4">
         <div class="row">
             <!-- Left Column: Tech Stack, Resume, Photo of me-->
-            <div class="col-md-4">
+            <div class="col-md-4 text-center">
                 <section>
                 
                 <img src="CarlosC47352.jpg" alt="Picture of me!" class="img-fluid mb-3" />
                 <p>Welcome to my website!</p>
                 <h4>Resume</h4>
-                <a href="Carlos_Carandang_Resume.pdf" download="Carlos_Carandang_Resume.pdf" class="btn btn-primary mb-3">Download PDF File</a>
+                <a href="Carlos_Carandang_Resume.pdf" download="Carlos_Carandang_Resume.pdf" class="btn btn-primary mb-3 w-100">Download PDF File</a>
                 
-                <section id="tech-stack">
+                <section id="tech-stack" class="text-center">
                     <h4>Tech Stack</h4>
 
                     <!-- Dropdown Menu for Tech Stack -->
-                    <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="dropdown mt-3">
+                        <button class="btn btn-primary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Languages
                         </button>
                         <ul class="dropdown-menu">
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="dropdown mt-3">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-primary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Frameworks & Libraries
                         </button>
                         <ul class="dropdown-menu">
@@ -86,7 +86,7 @@
                     </div>
 
                     <div class="dropdown mt-3">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-primary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Tools & OS
                         </button>
                         <ul class="dropdown-menu">
