I messed up somewhere

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-4 text-center">
                 <section>
                 
-                <img src="CarlosC47352.jpg" alt="Picture of me!" class="img-fluid mb-3" />
+                <img src="CarlosC47352.jpg" alt="Picture of me!" class="img-fluid rounded-circle mb-3" />
                 <p>Welcome to my website!</p>
                 <h4>Resume</h4>
                 <a href="Carlos_Carandang_Resume.pdf" download="Carlos_Carandang_Resume.pdf" class="btn btn-primary mb-3 w-100">Download PDF File</a>
