Updated resume and tech-stack visuals

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <!-- Include your JavaScript here, at the bottom -->
+    <!-- Insert scripts.js -->
     <script src="scripts.js"></script>
 </body>
 </html>
